--- a/estilo.css
+++ b/estilo.css
@@ -31,7 +31,7 @@ header{
     transition: 0.5s;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 header.rolagem{
     background-color: white
@@ -65,6 +65,10 @@ header ul li a:hover{
     color: green;
     text-decoration: none;
     font-weight: 600;
+}
+
+header ul:last-child{
+    margin-right: 100px;
 }
 
 h2 {
@@ -162,4 +166,15 @@ p{
 
 a {
     text-decoration: none;
+}
+
+#botao{
+    padding:9px;
+    background-color: green;
+    color: #fff;
+    border-radius: 50px;
+}
+
+.img-produtos {
+    text-align: center;
 }
